# LiveCamTester

./: .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: AiAlgorithmFeatures.h  AnnotatedVideoWidget.cpp  AnnotatedVideoWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
